deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  namespace: petclinic

spec:
  replicas: 2
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        image: 450444046629.dkr.ecr.ap-northeast-1.amazonaws.com/user19-petclinic:15
      
        ports:
        - containerPort: 8080
